# RAG-Chatbot

./: .env.example  .gitignore  ISSUES.md  README.md  UMT_Chatbot.postman_collection.json  db.sqlite3  manage.py  pyproject.toml
authenticate/: models.py  serializers.py  urls.py  views.py
authenticate/migrations/: 0001_initial.py
chatbot/: admin.py  models.py  serializers.py  urls.py
chatbot/management/commands/: clearcache.py
chatbot/migrations/: 0001_initial.py
chatbot/utils/: embedding_setup.py  ingestion.py  rag.py
chatbot/views/: __init__.py  chat.py  documents.py
chroma_db/: chroma.sqlite3
media/uploads/: faqs.txt  studyhub_ai_report_30d.csv
templates/: query.html  upload.html
umt_chatbot_groq/: asgi.py  settings.py  urls.py  wsgi.py
uoj_chatbot_groq/: asgi.py  settings.py  wsgi.py
